--- a/task7.ipynb
+++ b/task7.ipynb
@@ -248,7 +248,7 @@
     "conn = mysql.connector.connect(\n",
     "    host=\"localhost\",     \n",
     "    user=\"root\",           \n",
-    "    password=\"ujwal@2003\"\n",
+    "    password=\"yourpassword\"\n",
     "    database=\"sales_db\"     \n",
     ")\n"
    ]
